--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,105 +1,155 @@
+/* Cuerpo */
+
 :root {
-	--dhd: 1%;
+	background-color: rgb(31, 118, 121);
 }
 
-html {
-    display: block;
-	color: -internal-root-color;
-	background: #C6FFDD;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right,  #ffffe6, #fdffa0, #ffffff);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right,  #ffffe6, #fdffa0, #ffffff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	background-image:url(
-		https://cf.bstatic.com/images/hotel/max1024x768/137/137937848.jpg);
-	background-size: cover;
-	background-position: center center;
-}
-#Dad {
-	margin: 0;
-}
 body {
-	overflow: auto;
+	display: block;
 	margin: 0;
-	padding: 0;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
+	max-height: max-content;
 }
-#head {
-	background-color:#292929;
-	height:100px;
-	display:contents;
-}
-#text {
-	font-size:80px;
-	display:contents;
-	margin-block-start: 0.67em;
-    	margin-block-end: 0.67em;
-    	margin-inline-start: 0px;
-    	margin-inline-end: 0px;
-    	font-weight: bold;
-	color:#fff;
-	text-shadow: #707070 -2px 1px;
-}
-.Bar-creative {
-	display: flex;
-	position: absolute;
-	top: 1.87in;
-	right: 3in;
-	left: 0.8in;
-	margin: 0 0 1rem 0;
-	background: silver;
-	background: -webkit-linear-gradient(to right, #92aaa2a9, #dad2c2, #cfd9e69d);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #cfdfd9a9, #c2dacd, #ecece09d); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-	z-index: 2;
 
+header {
+	display: flex;
+	margin: 0;
+	margin-right: 0;
+	right: 0;
+	min-width: 100vh;
+	height: 130px;
+	padding: 1%;
+	font-size: 78px;
+	background-color: #444;
+	color: #eee;
+	z-index: 999;
 }
-#foto {
-	width:3in;
-	height:3in;
-	background-color: white;
-	background-image: url(
-		https://pbs.twimg.com/profile_images/674612825655001092/otSppchw_400x400.jpg);
-  	background-size: cover;
-	background-position: 0em, 0.22em;
-	border-block-color: black;
+header .title_name {
+	display: flex;
+	align-self: flex-end;
+}
+
+header .MyPicture {
 	border-radius: 50%;
-	z-index: 9;
-}
-.patronicio {
-	overflow: hidden;
-	z-index: 1;
-}
-#parrafo::after {
-	font-family: Georgia, 'Times New Roman', Times, serif;
-	font-size: 16px;
-	text-indent: 0.34in;
-	color: #68696d;
-	top: 30%;
-	right: 10%;
-}
-#titulo {
-	font-family: Georgia, 'Times New Roman', Times, serif;
-	font-size: 26px;
-	top: 15%;
-	right: 10%;
-	text-align: right;
+	width: 2.5em;
+	height: 2.5em;
+	margin: 40px;
+	background-color:#000;
+	z-index: 998;
 }
 
-.footer 
-{
-	color: rgb(226, 166, 117);
-	text-shadow:#ffff8a83 -2px 2px;
-	background: linear-gradient(to right,#e9b4899f,#e27d2ac0,#ffd900a2);
-	size: 100% 100%;
-	position: absolute;
-	justify-content: end;
+/* contenido */
+
+.contenido {
+	display: flex;
+	bottom:0;
+	min-width: 100vh;
+}
+
+content .pagina {
+	margin: 10px;
+	background:rgb(231, 249, 250);
+	right:0;
+	width: 100%;
+	
+}
+
+.pagina .encabezado {
+	font-size:42px;
+	text-align: center;
+}
+
+.dialogo{
+	padding: 0 3.2em;
+	font-size: 20px;
+	margin: 2% 10%;
+	margin-bottom: 9%;
+}
+
+.dialogo p {
+	margin-bottom: 8%;
+}
+
+/* Lista de enlaces */
+
+.PanelOption {
+	padding-top: 5%;
+	padding-right: 2%;
+	background-color:#255;
+	max-width: 25%;
+}
+
+.navegar ul li a {
+	display: block;
+	color:#bbb;
+	padding-top:0.5em;
+
+}
+
+.lista_desplegable li {
+	list-style-type: none;
+}
+
+.lista_desplegable li a {
+	font-family: Georgia, 'Times New Roman', Times, serif;
+	font-size: 1.4rem;
+	margin-bottom: 15%;
+	text-decoration: none;
+	height: 3.3rem;
+	text-align: center;
+}
+
+.lista_desplegable li a:hover {
+	background:#366;
+	border-radius: 5px;
+	transition: all 0.4s linear;
+}
+
+/* pie de pagina */
+
+footer {
+	display: block;
 	left: 0;
 	right: 0;
-	bottom: 0;
-	padding: 3rem 0;
-	margin: 1rem 0 0 0;
-	font-size:2.46em;
-	text-size-adjust: auto;
-	letter-spacing:8px;
-	z-index: 10;
+	bottom:0;
+	min-width: 100vh;
+	background: #444;
+	padding: 1%;
+}
+
+footer .info_personal {
+	display: flex;
+	margin: 3%;
+}
+
+footer .info_personal .number .iconwame {
+	width: 3.5em;
+	height: 3.5em;
+	filter: invert(78%);
+
+}
+
+footer .gmail {
+    display: flex;
+    align-items: flex-start;
+    margin-left: 30px;
+}
+
+footer .gmail .icongmail {
+	width: 3.6em;
+	height: 3.1em;
+	border-radius: 6px;
+	filter: opacity(30px);
+
+}
+
+footer .gmail p {
+	text-decoration: none;
+	top: 0;
+	color: #bbb;
+	margin-left: 20px;
+	padding-bottom: 14px;
+}
+
+footer div {
+	margin-left: 30px;
 }
