--- a/static/css/home.css
+++ b/static/css/home.css
@@ -10,6 +10,20 @@ body {
 	max-height: max-content;
 }
 
+body::-webkit-scrollbar {
+	width: 15px;
+	height: 15px;
+}
+body::-webkit-scrollbar-track {
+	background-color: #255;
+	box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+}
+body::-webkit-scrollbar-thumb{
+	background-color:#387;
+    border-radius: 10px; 
+    box-shadow: inset 0 0 6px rgba(0,0,0,.3); 
+}
+
 header {
 	display: flex;
 	margin: 0;
@@ -25,14 +39,17 @@ header {
 }
 header .title_name {
 	display: flex;
+	margin-left: 2.7em;
 	align-self: flex-end;
 }
 
 header .MyPicture {
+	display: block;
 	border-radius: 50%;
+	top: 25px;
+	margin-right: 30px;
 	width: 2.5em;
 	height: 2.5em;
-	margin: 40px;
 	background-color:#000;
 	z-index: 998;
 }
@@ -46,7 +63,6 @@ header .MyPicture {
 }
 
 content .pagina {
-	margin: 10px;
 	background:rgb(231, 249, 250);
 	right:0;
 	width: 100%;
