--- a/templates/home.html
+++ b/templates/home.html
@@ -2,10 +2,10 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
-	<script src="{{ url_for('static', filename='JS/behavior.js') }}"></script>
-	<!-- <link rel="stylesheet" href="../static/css/home.css">
-	<script src="../static/js/behavior.js"></script> -->
+	<!-- <link rel="stylesheet" href="{{ url_for('static', filename='css/home.css') }}">
+	<script src="{{ url_for('static', filename='JS/behavior.js') }}"></script> -->
+	<link rel="stylesheet" href="../static/css/home.css">
+	<script src="../static/js/behavior.js"></script>
 
 	<title>Blog - Kenneth Briones</title>
 </head>
@@ -13,7 +13,7 @@
 <body>
 	<header>
 		<img class="MyPicture"
-			src="https://scontent.fmga6-1.fna.fbcdn.net/v/t1.6435-1/s200x200/181401401_3859964854120503_7013883171859574706_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=7206a8&_nc_ohc=GkvLNDmNIqIAX-nj04j&_nc_ht=scontent.fmga6-1.fna&oh=00_AT_dBpzC0lMfNkA7yqhtaH6wGPkzKvpKjnFmk2lLrAAdHg&oe=61FBD8C6"
+			src="https://scontent.fmga6-1.fna.fbcdn.net/v/t1.6435-1/s200x200/181401401_3859964854120503_7013883171859574706_n.jpg?_nc_cat=110&ccb=1-5&_nc_sid=7206a8&_nc_ohc=e5vo-81ifDwAX_LtLYF&_nc_ht=scontent.fmga6-1.fna&oh=00_AT8VLGW9uJNNCC5tCzUf-UGpXTgzKTMmjVn-9j6SAe5AGw&oe=622365C6"
 			alt="">
 		<div class="title_name">Kenneth Briones
 		</div>
